fixed some ui issues

--- a/src/sections/player-desktop/index.module.scss
+++ b/src/sections/player-desktop/index.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #EAEAEA;
+  background-color: #eaeaea;
   padding: 1rem;
   width: 100%;
   grid-gap: 0.5rem;
@@ -92,12 +92,6 @@
   }
 }
 
-// BANNER
-
-.banner {
-  max-height: 30rem;
-}
-
 @media (max-width: 1400px) {
   .player {
     max-height: 25rem;
@@ -105,10 +99,6 @@
     &__img {
       max-height: 25rem;
     }
-  }
-
-  .banner {
-    max-height: 20rem;
   }
 }
 
@@ -161,10 +151,6 @@
     &__img {
       max-height: 35rem;
     }
-  }
-
-  .banner {
-    max-height: 35rem;
   }
 }
 
