--- a/src/layout/app-layout/style.module.scss
+++ b/src/layout/app-layout/style.module.scss
@@ -26,7 +26,7 @@
     overflow: hidden;
     background: #fff;
 
-    p{
+    p {
       padding: 1rem;
     }
   }
@@ -37,9 +37,6 @@
   height: 100%;
   padding: 2.6rem 3.7rem !important;
   padding-top: 6.5rem !important;
-}
-.avatar {
-  background: red;
 }
 
 .editProfile {
@@ -122,9 +119,6 @@
   }
 
   &__header {
-    .accordion-button.collapsed {
-      background: red;
-    }
     & button {
       background-color: transparent !important;
       box-shadow: none !important;
@@ -136,13 +130,8 @@
       }
       &::after {
         display: none !important;
-        //   color: black !important;
       }
     }
-    // & button:not(.collapsed)::after {
-    //   background-image: red !important;
-    //   color: black !important;
-    // }
   }
   &__icon {
     color: #fff;
@@ -343,7 +332,7 @@
 @media (max-width: 768px) {
   .wrapper {
     &__side {
-      display: none;
+      // display: none;
     }
 
     &__content {
