--- a/src/sections/player-tablet/index.module.scss
+++ b/src/sections/player-tablet/index.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
   width: 100%;
-  // position: absolute;
+  position: absolute;
+  background-color: #e5e5e5;
   left: 0;
   top: 100%;
   height: 13.6rem;
@@ -49,7 +50,6 @@
 }
 
 .btn {
-  // position: relative;
   background: transparent;
   outline: none;
   border: none;
@@ -76,8 +76,8 @@
 }
 
 .otherBtn {
-  height: 4.1rem;
-  width: 4.1rem;
+  height: 3rem;
+  width: 3rem;
 }
 
 .image {
