--- a/src/sections/card/index.module.scss
+++ b/src/sections/card/index.module.scss
@@ -1,26 +1,13 @@
-.blog {
-  padding: 3rem;
-
-  &__header {
-    font-size: var(--fs-30);
-    font-weight: var(--fw-6);
-  }
+.card {
+  height: 43.3rem !important;
+  width: 100%;
 }
 
-// .cardContainer {
-//   display: flex;
-//   flex-wrap: wrap;
-//   width: calc(20% - 34px) !important;
-//   padding: 0 !important;
-//   margin: 0 !important;
-// }
-
-.switch::before {
-  padding-left: 2rem;
+.image {
+  height: 24.7rem;
 }
 
 .title {
-  text-align: center;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   line-height: 22px !important;
@@ -36,14 +23,14 @@
 .footerSection {
   display: flex;
   align-items: center;
-  padding: 1rem 1.5rem;
+  padding: 1rem;
 
   &__genre {
     background-color: #eeeeee !important;
     font-size: var(--fs-16) !important;
     font-weight: var(--fw-5) !important;
     color: black !important;
-    padding: 0.5 2rem !important;
+    // padding: 0.5 1rem !important;
     border: none !important;
     border-radius: 2rem !important;
     &:hover {
@@ -52,6 +39,7 @@
   }
 
   &__more {
+    list-style: none;
     margin-left: 1.2rem;
     font-size: var(--fs-14);
     font-weight: var(--fw-5);
@@ -59,7 +47,49 @@
   }
 }
 
+@media (max-width: 1440px) {
+  .card {
+    height: 28.9rem !important;
+  }
+
+  .image {
+    height: 16.5rem;
+  }
+
+  .title {
+    font-size: var(--fs-16) !important;
+    font-weight: var(--fw-5) !important;
+  }
+
+  .footerSection {
+    &__genre {
+      font-size: var(--fs-12) !important;
+      font-weight: var(--fw-4) !important;
+      line-height: 1.8rem;
+    }
+
+    &__more {
+      margin-left: 1.2rem;
+      font-size: var(--fs-12);
+      font-weight: var(--fw-5);
+      line-height: 1.8rem;
+    }
+  }
+}
+
 @media (max-width: 1280px) {
+  .card {
+    height: 25rem !important; 
+  }
+
+  .image {
+    height: 12rem;
+  }
+
+  .body {
+    height: 100%;
+  }
+
   .footerSection {
     &__genre {
       font-size: var(--fs-12);
