--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -256,8 +256,6 @@ h6 {
       padding: 20px;
 
       .blogBox__title {
-        min-height: 100px;
-
         h4 {
           font-weight: 700;
           color: #000;
@@ -272,6 +270,7 @@ h6 {
 
       .hashtag {
         background: #eeeeee;
+        color: black;
         border-radius: 48.2454px;
         width: 80px;
         height: 30px;
