--- a/src/sections/blog-video-detail/index.module.scss
+++ b/src/sections/blog-video-detail/index.module.scss
@@ -1,37 +1,106 @@
 .wrapper {
-    padding: 2.5rem 1.7rem;
+  padding: 2.5rem 1.7rem;
+}
+
+.detail {
+  &__title {
+    font-size: var(--fs-62);
+    font-weight: var(--fw-7);
   }
-  
+  &__img {
+    width: 100%;
+    aspect-ratio: 3/1;
+    object-fit: cover;
+    object-position: center;
+  }
+  &__video {
+    padding: 25%;
+  }
+  &__video,
+  &__img {
+    margin-top: 3.9rem;
+  }
+  &__content {
+    font-size: var(--fs-28);
+    font-weight: var(--fw-4);
+    margin-top: 4rem;
+    padding: 0 1rem;
+  }
+}
+
+.detail .detailImage {
+  margin-top: 30px;
+}
+
+.detail .detailContent {
+  margin-top: 50px;
+}
+.detail .detailContent p {
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 36px;
+}
+
+@media (max-width: 1440px) {
   .detail {
     &__title {
-      font-size: var(--fs-60);
+      font-size: var(--fs-50);
       font-weight: var(--fw-7);
     }
-    &__img {
-      width: 100%;
-      aspect-ratio: 3/1;
-      object-fit: cover;
-      object-position: center;
+    &__content {
+      font-size: var(--fs-20);
+      font-weight: var(--fw-4);
+    }
+  }
+}
+
+@media (max-width: 1280px) {
+  .detail {
+    &__title {
+      font-size: var(--fs-40);
+      font-weight: var(--fw-7);
     }
     &__content {
-      font-size: var(--fs-28);
+      font-size: var(--fs-18);
       font-weight: var(--fw-4);
-      margin-top: 4rem;
-      padding-right: 1.5rem;
-      padding-left: 1.5rem;
     }
   }
-  
-  .detail .detailImage {
-    margin-top: 30px;
-  }
+}
 
-  .detail .detailContent {
-    margin-top: 50px;
+@media (max-width: 992px) {
+  .detail {
+    &__title {
+      font-size: var(--fs-34);
+      font-weight: var(--fw-7);
+    }
+    &__content {
+      font-size: var(--fs-16);
+      font-weight: var(--fw-4);
+    }
   }
-  .detail .detailContent p {
-    font-size: 22px;
-    font-weight: 400;
-    line-height: 36px;
+}
+
+@media (max-width: 768px) {
+  .detail {
+    &__title {
+      font-size: var(--fs-30);
+      font-weight: var(--fw-7);
+    }
+    &__content {
+      font-size: var(--fs-16);
+      font-weight: var(--fw-4);
+    }
   }
-  
+}
+@media (max-width: 576px) {
+  .detail {
+    &__title {
+      font-size: var(--fs-34);
+      font-weight: var(--fw-7);
+    }
+    &__content {
+      font-size: var(--fs-16);
+      font-weight: var(--fw-4);
+    }
+  }
+}
