--- a/src/components/ui/filter-bar/index.module.scss
+++ b/src/components/ui/filter-bar/index.module.scss
@@ -6,19 +6,32 @@
   // margin-top: 10px;
   width: 100%;
 
-  &__icon {
-    font-size: var(--fs-16);
-    font-weight: var(--fw-6);
+  &__link{
+    margin-left: 5rem;
+    display: flex;
+    align-items: center;
+    color: #fff;
+    text-decoration: unset;
+    &_arrow{
+      margin-right: 1rem;
+    }
+    &_icon {
+      font-size: var(--fs-19);
+      font-weight: var(--fw-6);
+    }
   }
+
+  
 
   &__btn {
     background-color: #373737 !important;
-    font-size: var(--fs-16) !important;
-    font-weight: var(--fw-6) !important;
-    color: black !important;
+    font-size: var(--fs-13) !important;
+    font-weight: var(--fw-5) !important;
+    color: #fff !important;
     padding: 0.5rem 1.6rem !important;
-    border: none !important;
+    border: 2px solid #484848 !important;
     border-radius: 2rem !important;
+    text-transform: capitalize;
     &:hover {
       background-color: #cccccca4 !important;
     }
@@ -35,6 +48,8 @@
 
 .active {
   background-color: #ffffff !important;
+  color: black !important;
+  border: 2px solid #ffff !important;
 }
 
 @media (max-width: 768px) {
