--- a/src/sections/player-desktop/index.module.scss
+++ b/src/sections/player-desktop/index.module.scss
@@ -28,7 +28,7 @@
   position: relative;
   color: #fff;
   width: 100%;
-  max-height: 32rem;
+  min-height: 27rem;
 
   &__overlay {
     position: absolute;
@@ -41,7 +41,7 @@
   }
 
   &__img {
-    max-height: 32rem;
+    min-height: 27rem;
     width: 100%;
     // object-fit: cover;
   }
