--- a/src/pages/video/index.module.scss
+++ b/src/pages/video/index.module.scss
@@ -61,21 +61,21 @@
     // padding-bottom: 2.4rem;
   }
   :global(.swiper-pagination) {
-    padding-top: 2.4rem !important;
+    padding-top: 24px !important;
     bottom: 0 !important;
     text-align: right;
     background-color: #e5e5e5 !important;
   }
   :global(.swiper-pagination-bullet) {
-    width: 1rem;
-    height: 1rem;
-    border-radius: 0.5rem;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
   }
   :global(.swiper-pagination-bullet-active) {
     background-color: #000;
-    width: 1rem;
-    height: 1rem;
-    border-radius: 0.5rem;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
   }
 
   &__header {
