--- a/src/sections/card/podcast/index.module.scss
+++ b/src/sections/card/podcast/index.module.scss
@@ -1,31 +1,29 @@
 .card {
-  height: 43.6rem !important;
+  height: 432.6px !important;
 
   &__header {
-    height: 23.81rem !important;
+    height: 238.1px !important;
   }
 
   .body {
-    padding: 1.5rem;
+    padding: 15px;
 
     &__title {
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
-      font-size: var(--fs-19) !important;
+      font-size: var(--fs-21) !important;
       font-weight: var(--fw-6) !important;
       color: black;
-      line-height: 2.366rem !important;
+      line-height: 1.35;
     }
     &__description {
       display: -webkit-box;
       -webkit-line-clamp: 1;
       -webkit-box-orient: vertical;
       overflow: hidden;
-      font-size: var(--fs-15);
-      margin-top: 0.94rem;
-      line-height: 2.4rem;
+      font-size: var(--fs-16);
       color: black;
     }
 
@@ -33,37 +31,153 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-top: 3rem;
+      margin-top: 9.1px;
 
       &__time {
-        font-size: var(--fs-14);
-        font-weight: var(--fw-4);
-        line-height: 2.2rem;
+        font-size: var(--fs-15);
       }
 
       &__podcastBtn {
         background-color: transparent;
         border-radius: 50%;
-        height: 4rem;
-        width: 4rem;
-        border: 4px solid;
+        height: 52.4px;
+        width: 52.4px;
+        border: 3px solid;
         position: relative;
       }
 
       &__icon {
-        width: 1.6rem !important;
-        height: 1.6rem !important;
+        width: 60% !important;
+        height: 60% !important;
         position: absolute;
-        top: 27%;
-        left: 27%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
+}
+
+@media (max-width: 2500px) {
+  .card {
+    .body {
+      &__title {
+        font-size: var(--fs-19) !important;
+        font-weight: var(--fw-6) !important;
+      }
+      &__description {
+        font-size: var(--fs-15);
+      }
+      .footer {
+        &__podcastBtn {
+          height: 52.4px;
+          width: 52.4px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1920px) {
+  .card {
+    height: 344.9px !important;
+
+    &__header {
+      height: 189px !important;
+    }
+
+    .body {
+      padding: 11.9px;
+
+      &__title {
+        -webkit-line-clamp: 2;
+        font-size: var(--fs-15) !important;
+        font-weight: var(--fw-6) !important;
+      }
+      &__description {
+        -webkit-line-clamp: 1;
+        font-size: var(--fs-12);
+      }
+
+      .footer {
+        &__time {
+          font-size: var(--fs-12);
+        }
+        &__podcastBtn {
+          height: 41.7px;
+          width: 41.7px;
+        }
       }
     }
   }
 }
 
 @media (max-width: 1789px) {
+  .card {
+    height: 308.4px !important;
+
+    &__header {
+      height: 169.8px !important;
+    }
+
+    .body {
+      padding: 10.7px;
+
+      &__title {
+        font-size: var(--fs-14) !important;
+        font-weight: var(--fw-6) !important;
+      }
+      &__description {
+        font-size: var(--fs-11);
+      }
+
+      .footer {
+        margin-top: 10.7px;
+
+        &__time {
+          font-size: var(--fs-11);
+        }
+        &__podcastBtn {
+          height: 37.3px;
+          width: 37.3px;
+        }
+      }
+    }
+  }
 }
+
 @media (max-width: 1600px) {
+  .card {
+    height: 223.8px !important;
+
+    &__header {
+      height: 123.2px !important;
+    }
+
+    .body {
+      padding: 7.7px;
+
+      &__title {
+        font-size: var(--fs-10) !important;
+        font-weight: var(--fw-6) !important;
+      }
+      &__description {
+        font-size: var(--fs-8);
+      }
+
+      .footer {
+        margin-top: 7.7px;
+
+        &__time {
+          font-size: var(--fs-8);
+        }
+        &__podcastBtn {
+          height: 27.1px;
+          width: 27.1px;
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 1366px) {
