--- a/src/sections/sliders/index.module.scss
+++ b/src/sections/sliders/index.module.scss
@@ -7,17 +7,12 @@
     text-align: right;
     background-color: #e5e5e5 !important;
   }
-  :global(.swiper-pagination-bullet) {
-    width: 1rem;
-    height: 1rem;
-    border-radius: .5rem;
+  :global(.swiper-pagination-bullet),
+  :global(.swiper-pagination-bullet-active) {
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
   }
-:global(.swiper-pagination-bullet-active) {
-  background-color: #000;
-  width: 1rem;
-  height: 1rem;
-  border-radius: .5rem;
-} 
 
   &__header {
     font-size: var(--fs-31);
@@ -28,7 +23,6 @@
     color: black;
     text-decoration: underline;
     font-size: var(--fs-18);
-    line-height: 3rem;
   }
 }
 
@@ -39,7 +33,6 @@
     }
     &__seeAll {
       font-size: var(--fs-16);
-      line-height: 2.5rem;
     }
   }
 }
